--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,6 +6,7 @@ vmagent_docker_labels:
   - vmagent
 vmagent_config_dir: /var/lib/vmagent
 vmagent_storage_dir: "{{ vmagent_config_dir }}/data"
+vmagent_address: "127.0.0.1:"
 
 # address and port vminsert or balancer
 vmagent_remotewrite_address: "{{ ansible_host }}"
