Delete "register" and "restarted" container

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -20,14 +20,14 @@ vmagent_extra_hosts: []
 
 prometheus_config:
   global:
-    scrape_interval:     5s
-    evaluation_interval: 5s
-  scrape_configs:
-    - job_name: "{{ job_hostname }}_nodeexporter"
-      static_configs:
-        - targets: ['{{ ansible_host }}:9100']
-          labels:
-            dns_hostname: "{{ ansible_host }}"
+    scrape_interval:     10s
+    evaluation_interval: 10s
+#   scrape_configs:
+#     - job_name: "{{ job_hostname }}_nodeexporter"
+#       static_configs:
+#         - targets: ['{{ ansible_host }}:9100']
+#           labels:
+#             dns_hostname: "{{ ansible_host }}"
 
 vmagent_additional_configs: []
 # Example of additional configuration files. They will be placed in file named in
